# natural-earth-basemap

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  lib.rs
src/: basemap.rs  lib.rs  shapefile_loader.rs
src/basemap/: draw.rs  draw_svg.rs  my_module.rs  projections.rs  shapefile_visualizer.rs  styles.rs  utils.rs
src/basemap/projections/: equirectangular.rs  orthographic.rs
