[package]
name = "natural-earth-basemap"
version = "0.1.2"
edition = "2024"
description = "A Rust library for creating SVG basemaps using Natural Earth data, supporting multiple styles and customizable map projections"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["vector-graphics", "graphics", "map","visualization"]
repository = "https://github.com/Green-Nova/natural-earth-basemap"
categories = ["visualization", "science::geo","rendering","multimedia::images"]


[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
geo = "0.30.0"
image = "0.25.6"
resvg = "0.45.1"
rustc-hash = "2.1.1"
shapefile = "0.7.0"
svg = "0.18.0"
tiny-skia = "0.11.4"


[[bin]]
name = "example"
path = "src/bin/example.rs"

